@@ -1,3 +1,8 @@
+2022-01-30 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSPredicate.m:
+	Fix for git #233
+
 2022-01-15 Frederik Seiffert <frederik@algoriddim.com>
 
 	* Source/NSPathUtilities.m:
